dovecot (1:1.1.11-2) unstable; urgency=low

  * debian/dovecot-common.init: fixed a bug in the init script, adding a
    missing slash in the PIDFILE path. (Closes: #516845)
  * debian/dovecot-common.init: fixed a bug in the init script, sending the HUP
    signal for reloading the configuration. (Closes: #512197)

 -- Fabio Tranchitella <kobold@debian.org>  Fri, 27 Feb 2009 15:11:08 +0100

dovecot (1:1.1.11-1) unstable; urgency=low

  * New upstream release, upload to unstable. (Closes: #507122)
  * debian/patches/dovecot-quota.dpatch: fixed a bug in the imap quota plugin.
    (Closes: #484677)
  * debian/dovecot-common.init: added the status action, thanks Fladischer
    Michael for the patch. (Closes: #509694)
  * debian/dovecotpw.1: added manpage for dovecotpw, thanks Xavier Luthi for
    the patch. (Closes: #504712)

 -- Fabio Tranchitella <kobold@debian.org>  Fri, 20 Feb 2009 20:39:38 +0100

dovecot (1:1.1.9-1) experimental; urgency=low

  [ Fabio Tranchitella ]
  * debian/control: dovecot-common suggests ntp.

  [ Joel Johnson ]
  * New upstream release
  * updated managesieve patch to apply against new version

 -- Joel Johnson <mrjoel@lixil.net>  Sat, 24 Jan 2009 04:12:42 +0000

dovecot (1:1.1.8-1) experimental; urgency=low

  * New upstream release.
  * debian/control: added LDA to the description of dovecot-common.

 -- Fabio Tranchitella <kobold@debian.org>  Wed, 07 Jan 2009 23:14:29 +0100

dovecot (1:1.1.7-1) experimental; urgency=low

  * New upstream release
  * Updated dovecot-ssh.patch for new release
  * Updated MANAGESIEVE to 0.10.4
  * Fix package to support double compilation
    - Properly clean dovecot-managesieve as pointed out by Stephan Bosch
    - Add --copy directive to automake invocation

 -- Joel Johnson <mrjoel@lixil.net>  Thu, 04 Dec 2008 20:52:11 -0700

dovecot (1:1.1.2-3) experimental; urgency=low

  * debian/control: added libbz2-dev to the Build-Depends to enable the bzip2
    support. (Closes: #495129)
